qbs (1.3.1+dfsg-2) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Enable disable_rpath and qbs_enable_project_file_updates
    configuration flags, thanks Adam Majer for the patch
    (really closes: #763365).
  * Add a patch to correctly detect endianness of all supported
    by Debian architectures.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 06 Oct 2014 11:48:38 +0400

qbs (1.3.1+dfsg-1) unstable; urgency=medium

  * New upstream release.
    + Update .install files.
    + Update libqbscore1.symbols. There are missing symbols, but
      we ignore that as the package has never been in testing.
  * Break/Replace qtcreator (<< 3.2.1+dfsg-4~) (closes: #763365).
  * Fix build failure when multiple compilers are installed.
  * Properly clean up after tests.
  * Update my e-mail address.
  * debian/watch: Use new repacksuffix option.
  * Update Vcs-Browser field to point to cgit interface.
  * debian/copyright: Use correct exception syntax.
  * Bump Standards-Version to 3.9.6, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 04 Oct 2014 10:21:08 +0400

qbs (1.2.2+dfsg-1) unstable; urgency=medium

  * Initial release (closes: #745095).

 -- Dmitry Shachnev <mitya57@gmail.com>  Sat, 26 Jul 2014 23:28:44 +0400