@@ -6,6 +6,8 @@ qbs (1.3.1+dfsg-2) UNRELEASED; urgency=medium
     (really closes: #763365).
   * Add a patch to correctly detect endianness of all supported
     by Debian architectures.
+  * Add lib/ to LD_LIBRARY_PATH when running tests (should fix
+    build failures on kfreebsd and hurd).
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 06 Oct 2014 11:48:38 +0400
 
